--- a/css/indexs/estilos-index.css
+++ b/css/indexs/estilos-index.css
@@ -29,7 +29,7 @@ body {
 .h1s{
     text-align: center;
     margin: 20px 0px 20px 0px;
-    font-family: Lexend;
+    font-family: 'Lexend';
     font-weight: 300;
     font-size: 400%;
     color: rgb(255, 255, 255);
@@ -57,28 +57,6 @@ div #imagen1, #imagen2, #imagen3{
   animation-delay: 0ms;
 }
 
-/*-------------------------------------------MÁS IMAGENES-------------------------------------------*/
- div .more_images_h1{
-    display: inline;
-    font-size: 300%;
-    padding: 1%;
-    text-decoration: none;
-    font-weight: 300;
-    color: rgb(255, 255, 255);
-    transition-property: border, border-radius, color;
-    transition-duration: 200ms;
-
-}
-
-.masimagenes_div a {
-    text-decoration: underline white;
-}
-
-.more_images_h1:hover {
-    border: 3px solid #6565b6;
-    border-radius: 2px;
-    color: rgb(121, 121, 218)
-}
 
 
 /*--------------------------------------------------------NAV--------------------------------------------------------*/
@@ -95,10 +73,6 @@ div nav ul li a{
 div nav ul li:hover a {
     color: rgb(121, 121, 218);
 }
-
-
-
-
 
 div nav ul li {
     margin: 15px;
@@ -163,6 +137,44 @@ div nav ul li:hover {
     animation-duration: 2s;
     animation-delay: 0ms;
   }
+
+  /* FOOTER */
+  footer::selection {
+    background-color: blueviolet;
+  }
+
+  footer {
+    font-weight: 100;
+    font-size: 12px;
+    text-align: center;
+  }
+  
+  footer #footer {
+    color: whitesmoke;
+  }
+
+  #footer,footer a{
+    padding-top: 15px;
+    font-family: 'Raleway';
+  }
+
+  #footer a {
+    text-decoration: none;
+    color: #7979DA;
+  }
+
+  #footer a:hover {
+    text-decoration: underline;
+  }
+
+  #footer a {
+      transition: color .3s;
+  }
+
+  #footer a:hover {
+      color: #9a9aff;
+  }
+  /* CLOSE FOOTER */
 /*------------------------------------------------------MEDIA QUERIES------------------------------------------------------*/
 
 
