--- a/css/indexs/estilos-index-white.css
+++ b/css/indexs/estilos-index-white.css
@@ -7,6 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap');
 
 
 * {
@@ -160,6 +162,63 @@ div nav ul li:hover {
     animation-duration: 2s;
     animation-delay: 0ms;
   }
+
+/* FOOTER */    
+
+footer::selection {
+    background-color: blueviolet;
+  }
+
+  footer {
+    font-weight: 100;
+    font-size: 12px;
+    text-align: center;
+  }
+  
+  footer #footer {
+    color: black;
+    font-family: 'IBM Plex Sans';
+    font-weight: 300;
+    font-size: 18px;
+    text-align: center;
+  }
+
+  #footer,footer a{
+    padding-top: 15px;
+  }
+
+  #footer a {
+    font-family: 'IBM Plex Sans';
+    text-decoration: none;
+    color: #5555aa;
+    transition: color .3s;
+  }
+
+  
+  #footer a:hover {
+    text-decoration: none;
+    color: #5a5ace;
+  }
+
+  #footer a:hover {
+    text-decoration: underline;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   @media (max-width: 1025px) {
     
