--- a/css/playlist/estilos-playlist-dark.css
+++ b/css/playlist/estilos-playlist-dark.css
@@ -123,12 +123,11 @@ div nav ul li:hover {
     background-color: #3f3f3f;
 }
 
+
+
 .list_songs img {
     border-radius: 10px;
-    transition-property: filter;
-    transition-duration: 200ms;
 }
-
 
 .list_songs img:hover {
     filter: brightness(80%);
@@ -142,7 +141,12 @@ div nav ul li:hover {
     margin-left: 6%; 
     border: 3px solid #09f0c9; 
     box-shadow: 0px 0px 10px #00bd9e;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
 
+.list_songs #ispy:hover {
+    transform: rotate(-5deg);
 }
 
 
@@ -172,6 +176,12 @@ div nav ul li:hover {
     margin-left: 6%; 
     border: 3px solid #76a0ee; 
     box-shadow: 0px 0px 10px #a5bff0;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #dou-even:hover {
+    transform: rotate(5deg);
 }
 
 .list_songs #dou-even_h1 {
@@ -198,6 +208,12 @@ div nav ul li:hover {
     margin-left: 6%; 
     border: 3px solid #415d83; 
     box-shadow: 0px 0px 10px #465770;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #beautiful:hover {
+    transform: rotate(-5deg);
 }
 
 
@@ -226,6 +242,12 @@ div nav ul li:hover {
     margin-left: 6%; 
     border: 3px solid #345367; 
     box-shadow: 0px 0px 10px #6eafdb;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #nobody:hover {
+    transform: rotate(5deg);
 }
 
 .list_songs #nobody_h1 {
@@ -247,16 +269,23 @@ div nav ul li:hover {
 
 /*-------------------------------------------------Take Me The Church - Hozier-------------------------------------------------*/
 
-#takeme {
+.list_songs #takeme {
     margin-top: 2%;
     float: left;
     margin-left: 6%; 
     border: 3px solid #ce712d; 
     box-shadow: 0px 0px 10px #fd8b39;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
 
 }
 
-#takeme_h1 {
+.list_songs #takeme:hover {
+    transform: rotate(-5deg);
+}
+
+
+.list_songs #takeme_h1 {
     text-align: center;
     text-decoration: none;
     margin-top: 10%;
@@ -265,7 +294,7 @@ div nav ul li:hover {
     float: right;
 }
 
-#takeme_h1:hover {
+.list_songs #takeme_h1:hover {
     color: #e77f34;
     text-decoration: underline 3px #e77f34;
 }
@@ -276,15 +305,22 @@ div nav ul li:hover {
 
 /*-------------------------------------------------No Idea - Don Toliver-------------------------------------------------*/
 
-#noidea {
+.list_songs #noidea {
     margin-top: 2%;
     float: left;
     margin-left: 6%; 
     border: 3px solid #73a4a9; 
     box-shadow: 0px 0px 10px #9cdbe2;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
 }
 
-#noidea_h1 {
+.list_songs #noidea:hover {
+    transform: rotate(5deg);
+}
+
+
+.list_songs #noidea_h1 {
     text-align: center;
     text-decoration: none;
     margin-top: 10%;
@@ -293,7 +329,7 @@ div nav ul li:hover {
     float: right;
 }
 
-#noidea_h1:hover {
+.list_songs #noidea_h1:hover {
     color: #73a4a9;
     text-decoration: underline 3px #73a4a9;
 }
@@ -304,15 +340,22 @@ div nav ul li:hover {
 
 /*------------------------------STAY-------------------------------------*/
 
-#stay {
+.list_songs #stay {
     margin-top: 2%;
     float: left;
     margin-left: 6%; 
     border: 3px solid #73a4a9; 
     box-shadow: 0px 0px 10px #9cdbe2;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
 }
 
-#stay_h1 {
+.list_songs #stay:hover {
+    transform: rotate(-5deg);
+}
+
+
+.list_songs #stay_h1 {
     text-align: center;
     text-decoration: none;
     margin-top: 10%;
@@ -321,7 +364,7 @@ div nav ul li:hover {
     float: right;
 }
 
-#stay_h1:hover {
+.list_songs #stay_h1:hover {
     color: #73a4a9;
     text-decoration: underline 3px #73a4a9;
 }
@@ -330,15 +373,21 @@ div nav ul li:hover {
 
 /* ------------------------------SUNFLOWER - POST MALONE------------------------------ */
 
-#sunflower {
+.list_songs #sunflower {
         margin-top: 2%;
         float: left;
         margin-left: 6%; 
         border: 3px solid #19186e; 
         box-shadow: 0px 0px 10px #807fd4;
+        transition-property: filter, transform;
+        transition-duration: 200ms;
+    }
+
+    .list_songs #sunflower:hover {
+        transform: rotate(5deg);
     }
     
-    #sunflower_h1 {
+.list_songs #sunflower_h1 {
         text-align: center;
         text-decoration: none;
         margin-top: 10%;
@@ -347,13 +396,171 @@ div nav ul li:hover {
         float: right;
     }
     
-    #sunflower_h1:hover {
+.list_songs #sunflower_h1:hover {
         color: #6462df;
         text-decoration: underline 3px #6462df;
     }
 
 
 /* ------------------------------CLOSE SUNFLOWER - POST MALONE------------------------------ */
+
+/* -------------------------------------------STAN------------------------------------------- */
+
+.list_songs #stan {
+    margin-top: 2%;
+    float: left;
+    margin-left: 6%; 
+    border: 3px solid #2267ab; 
+    box-shadow: 0px 0px 10px #2879c9;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #stan:hover {
+    transform: rotate(-5deg);
+}
+
+
+
+.list_songs #stan_h1 {
+    text-align: center;
+    text-decoration: none;
+    margin-left: 0;
+    margin-top: 10%;
+    margin-right: 30%;
+    color: white;
+    float: right;
+}
+
+
+.list_songs #stan_h1:hover {
+    color: #2267ab;
+    text-decoration: underline 3px #2267ab;
+}
+/* ----------------------------------------CLOSE STAN---------------------------------------- */
+
+/* ----------------------------------------INCREDIBLE---------------------------------------- */
+
+.list_songs #incredible {
+    margin-top: 2%;
+    float: left;
+    margin-left: 6%; 
+    border: 3px solid #e82a3d; 
+    box-shadow: 0px 0px 10px #e84a5a;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #incredible:hover {
+    transform: rotate(5deg);
+}
+
+
+
+.list_songs #incredible_h1 {
+    text-align: center;
+    text-decoration: none;
+    margin-left: 0;
+    margin-top: 10%;
+    margin-right: 17%;
+    color: white;
+    float: right;
+}
+
+
+.list_songs #incredible_h1:hover {
+    color: #e82a3d;
+    text-decoration: underline 3px #e82a3d;
+}
+
+/* ----------------------------------------CLOSE INCREDIBLE---------------------------------------- */
+
+
+/* GOODBYE */
+
+.list_songs #goodbye {
+    margin-top: 2%;
+    float: left;
+    margin-left: 6%;
+    border: 3px solid #a5b9da;
+    box-shadow: 0px 0px 10px #a5b9da;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #goodbye:hover {
+    transform: rotate(-5deg);
+}
+
+.list_songs #goodbye_h1 {
+    text-align: center;
+    text-decoration: none;
+    margin-left: 0;
+    margin-top: 10%;
+    margin-right: 19%;
+    color: white;
+    float: right;
+}
+
+.list_songs #goodbye_h1:hover {
+    color: #a5b9da;
+    text-decoration: underline;
+}
+/* CLOSE GOODBYE */
+
+/* LUV */
+
+.list_songs #luv {
+    margin-top: 2%;
+    float: left;
+    margin-left: 6%;
+    border: 3px solid #211b1c;
+    box-shadow: 0px 0px 10px #31292a;
+    transition-property: filter, transform;
+    transition-duration: 200ms;
+}
+
+.list_songs #luv:hover {
+    transform: rotate(5deg);
+}
+
+.list_songs #luv_h1 {
+    text-align: center;
+    text-decoration: none;
+    margin-left: 0;
+    margin-top: 10%;
+    margin-right: 22%;
+    color: white;
+    float: right;
+}
+
+.list_songs #luv_h1:hover {
+    text-decoration: underline;
+    color: #211b1c;
+}
+/* CLOSE LUV */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 1026px) {
@@ -401,8 +608,30 @@ div nav ul li:hover {
     }
 
     #sunflower_h1 {
-        margin-right: 6%;
+        font-size: 80%;
+        margin-right: 10%;
 
+    }
+    
+    .list_songs #stan_h1 {
+        margin-right: 25%;
+        font-size: 80%;
+    }
+
+    .list_songs #incredible_h1 {
+        font-size: 80%;
+        margin-right: 10%;
+    }
+
+    
+    .list_songs #goodbye_h1 {
+        margin-right: 13%;
+        font-size: 80%;
+    }
+    
+    .list_songs #luv_h1 {
+        margin-right: 18%;
+        font-size: 80%;
     }
 }
 
@@ -578,6 +807,10 @@ div nav ul li:hover {
 
     .list_songs #takeme_h1 {
         margin-right: 26%;
+    }
+
+    .list_songs #stan_h1 {
+        margin-right: 0 !important;
     }
 
     
